--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.2",
+    "rainy-background-reactnative": "^1.1.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
