--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -5,10 +5,5 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning">
-    <activity
-    android:name=".MainActivity"
-    android:screenOrientation="portrait">
-    </activity>
-    </application>
+        tools:ignore="GoogleAppIndexingWarning"/>
 </manifest>
