--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
     "@react-navigation/native": "^6.1.17",
