--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rainy-background-reactnative": "^1.1.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-background-actions": "^3.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-permissions": "^4.1.5",
