--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
     ext {
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 34
@@ -10,6 +12,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+      url "$rootDir/../node_modules/@notifee/react-native/android/libs"
+    }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
