--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "react-native-background-actions": "^3.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-pager-view": "^6.3.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-shared-group-preferences": "^1.1.24",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-text-ticker": "^1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
