--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rainy-background-reactnative": "^1.1.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-android-location-enabler": "^2.0.1",
     "react-native-background-actions": "^3.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.2",
@@ -38,7 +39,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-shared-group-preferences": "^1.1.24",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-ticker": "^1.14.0"
   },
