--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,7 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
+    implementation project(':react-native-alarm-notification')
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
     implementation(platform("com.google.firebase:firebase-bom:33.0.0"))
