--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rainy-background-reactnative": "^1.1.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-alarm-notification": "^1.8.0",
     "react-native-android-location-enabler": "^2.0.1",
     "react-native-background-actions": "^3.0.1",
     "react-native-chart-kit": "^6.12.0",
